// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabWindow Does not render tab content when a tab is disabled and clicked 1`] = `
<DocumentFragment>
  <div
    class="cf-tab-navigation cf-tab-navigation-full-screen"
    role="tablist"
  >
    <button
      aria-controls="main-tabpanel-0"
      aria-selected="true"
      class="cf-tab tab cf-active"
      data-value="0"
      id="main-tab-0"
      role="tab"
      tabindex="0"
    >
      <div>
        <span>
          <span>
            Tab 1
          </span>
        </span>
      </div>
    </button>
    <button
      aria-controls="main-tabpanel-1"
      aria-selected="false"
      class="cf-tab tab"
      data-value="1"
      disabled=""
      id="main-tab-1"
      role="tab"
      tabindex="-1"
    >
      <div>
        <span>
          <span>
            Tab 2
          </span>
        </span>
      </div>
    </button>
  </div>
  <div
    class="cf-tab-window-body-full-screen tabContent"
  >
    <div
      aria-hidden="false"
      class="tabPanel active"
      id="main-tabpanel-0"
      role="tabpanel"
    >
      Content
    </div>
    <div
      aria-hidden="true"
      class="tabPanel"
      id="main-tabpanel-1"
      role="tabpanel"
    />
  </div>
</DocumentFragment>
`;

exports[`TabWindow Matches snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="cf-tab-navigation"
    role="tablist"
  >
    <button
      aria-controls="main-tabpanel-0"
      aria-selected="true"
      class="cf-tab tab cf-active"
      data-value="0"
      id="main-tab-0"
      role="tab"
      tabindex="0"
    >
      <div>
        <span>
          <span>
            Tab 1
          </span>
        </span>
      </div>
    </button>
    <button
      aria-controls="main-tabpanel-1"
      aria-selected="false"
      class="cf-tab tab"
      data-value="1"
      id="main-tab-1"
      role="tab"
      tabindex="-1"
    >
      <div>
        <span>
          <span>
            Tab 2
          </span>
        </span>
      </div>
    </button>
  </div>
  <div
    class="cf-tab-window-body-full-screen tabContent"
  >
    <div
      aria-hidden="false"
      class="tabPanel active"
      id="main-tabpanel-0"
      role="tabpanel"
    >
      Content
    </div>
    <div
      aria-hidden="true"
      class="tabPanel"
      id="main-tabpanel-1"
      role="tabpanel"
    />
  </div>
</DocumentFragment>
`;

exports[`TabWindow Renders an empty div when no tabs are passed 1`] = `
<DocumentFragment>
  <div
    class="cf-tab-navigation"
    role="tablist"
  />
  <div
    class="cf-tab-window-body-full-screen tabContent"
  />
</DocumentFragment>
`;

exports[`TabWindow Renders full page when the \`fullPage\` prop is true 1`] = `
<DocumentFragment>
  <div
    class="cf-tab-navigation cf-tab-navigation-full-screen"
    role="tablist"
  >
    <button
      aria-controls="main-tabpanel-0"
      aria-selected="true"
      class="cf-tab tab cf-active"
      data-value="0"
      id="main-tab-0"
      role="tab"
      tabindex="0"
    >
      <div>
        <span>
          <span>
            Tab 1
          </span>
        </span>
      </div>
    </button>
    <button
      aria-controls="main-tabpanel-1"
      aria-selected="false"
      class="cf-tab tab"
      data-value="1"
      id="main-tab-1"
      role="tab"
      tabindex="-1"
    >
      <div>
        <span>
          <span>
            Tab 2
          </span>
        </span>
      </div>
    </button>
  </div>
  <div
    class="cf-tab-window-body-full-screen tabContent"
  >
    <div
      aria-hidden="false"
      class="tabPanel active"
      id="main-tabpanel-0"
      role="tabpanel"
    >
      Content
    </div>
    <div
      aria-hidden="true"
      class="tabPanel"
      id="main-tabpanel-1"
      role="tabpanel"
    />
  </div>
</DocumentFragment>
`;

exports[`TabWindow Renders tab content when a tab is selected 1`] = `
<DocumentFragment>
  <div
    class="cf-tab-navigation cf-tab-navigation-full-screen"
    role="tablist"
  >
    <button
      aria-controls="main-tabpanel-0"
      aria-selected="false"
      class="cf-tab tab"
      data-value="0"
      id="main-tab-0"
      role="tab"
      tabindex="-1"
    >
      <div>
        <span>
          <span>
            Tab 1
          </span>
        </span>
      </div>
    </button>
    <button
      aria-controls="main-tabpanel-1"
      aria-selected="true"
      class="cf-tab tab cf-active"
      data-value="1"
      id="main-tab-1"
      role="tab"
      tabindex="0"
    >
      <div>
        <span>
          <span>
            Tab 2
          </span>
        </span>
      </div>
    </button>
  </div>
  <div
    class="cf-tab-window-body-full-screen tabContent"
  >
    <div
      aria-hidden="true"
      class="tabPanel"
      id="main-tabpanel-0"
      role="tabpanel"
    />
    <div
      aria-hidden="false"
      class="tabPanel active"
      id="main-tabpanel-1"
      role="tabpanel"
    >
      Some other content
    </div>
  </div>
</DocumentFragment>
`;
